// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<PeriodicRevenueTooltip /> should render correctly 1`] = `
<ChartTooltip
  bodyComponent={
    <React.Fragment>
      <ForwardRef(styled.h3)>
        Revenue
      </ForwardRef(styled.h3)>
      <ForwardRef(styled.p)>
        $100.00
      </ForwardRef(styled.p)>
    </React.Fragment>
  }
  headerComponent={
    <ForwardRef(styled.p)>
      1529336865706
    </ForwardRef(styled.p)>
  }
/>
`;

exports[`<PeriodicRevenueTooltip /> should render correctly when active is false 1`] = `""`;

exports[`<PeriodicRevenueTooltip /> should render correctly when no payload is passed 1`] = `""`;

exports[`<PeriodicRevenueTooltip /> should render correctly with different dateformats  1`] = `
<ChartTooltip
  bodyComponent={
    <React.Fragment>
      <ForwardRef(styled.h3)>
        Revenue
      </ForwardRef(styled.h3)>
      <ForwardRef(styled.p)>
        $100.00
      </ForwardRef(styled.p)>
    </React.Fragment>
  }
  headerComponent={
    <ForwardRef(styled.p)>
      Monday, June 18th, 2018 @ 11:47 AM ET
    </ForwardRef(styled.p)>
  }
/>
`;
